--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --primary-color: #f05123;
     --black-color: #000;
     --white-color: #ffffff;
@@ -10,17 +10,19 @@
     --mail-color: #f47425;
     --invalid-color: #f33a58;
     --desc-color: #0000008a;
-    --first-color: #1dbfaf;
-    --second-color: #1dbfaf;
     --button-color: #1dbfaf;
+    --button-color-2: #fe2c55;
+    --hover-1: #e8ebed;
     --header-height: 120px;
     --button-image: linear-gradient(70.06deg, #2cccff -5%, #22dfbf 106%);
     --font-Roboto: 'Roboto', sans-serif;
 }
+
 * {
     box-sizing: inherit;
 }
-html{
+
+html {
     font-size: 62.5%;
     font-family: var(--font-Roboto);
     box-sizing: border-box;
@@ -46,6 +48,30 @@ html{
     to {
         opacity: 1;
         transform: scale(1);
+    }
+}
+
+@keyframes example {
+    from {
+        top: -100px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes example {
+    from {
+        top: -100px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
     }
 }
 
