--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@
 
 .app__header-head-list-down {
     list-style-type: none;
-    padding-right: 30px;
+    margin-right: 30px;
     display: flex;
     justify-content: space-around;
 }
@@ -101,6 +101,92 @@
     font-size: 1.8rem;
     line-height: 1.4rem;
     margin-top: 5px;
+}
+
+
+
+
+/* Nội dung phần Avartar */
+.app__header-head-avartar {
+    margin-top: -1px;
+    width: 28px;
+    border-radius: 100px;
+    position: relative;
+    cursor: pointer;
+    opacity: 1;
+}
+
+.app__header-avartar {
+    border-radius: 7px;
+    position: absolute;
+    background-color: var(--white-color);
+    top: 42px;
+    display: none;
+    transform-origin: top right;
+    animation: headerNoticeGrow ease-in-out 0.4s;
+    right: 32px;
+    box-shadow: 1px 1px 8px var(--gray-color);
+}
+
+.app__header-head-avartar:hover {
+    opacity: 0.9;
+}
+
+.app__header-head-item-has-avartar:hover .app__header-avartar {
+    display: block;
+}
+
+.app__header-avartar-nickname {
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.app__header-avartar-heading {
+    display: flex;
+    align-items: center;
+    padding: 12px 12px 0 12px;
+}
+
+.app__header-avartar::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 82px;
+    height: 25px;
+    top: -22px;
+    right: -1px;
+    background-color: transparent;
+
+}
+
+.app__header-avartar-in {
+    width: 44px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+
+.app__header-avartar-text {
+    margin-left: 15px;
+}
+
+.app__header-avartar-separator {}
+
+.app__header-avartar-list {
+    list-style: none;
+    padding-left: 0px;
+}
+
+.app__header-avartar-list-item {
+    padding-left: 10px;
+    padding-bottom: 6px;
+}
+
+.app__header-avartar-link {
+    text-decoration: none;
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: var(--text-color);
 }
 
 
@@ -194,6 +280,8 @@
     width: 59px;
     height: 57px;
     border-radius: 50px;
+    object-fit: cover;
+    object-position: top;
 }
 
 .app__header-notice-note {
@@ -214,81 +302,113 @@
     color: rgba(245, 117, 38, 0.7);
 }
 
-/* Nội dung phần Avartar */
-.app__header-head-avartar {
-    margin-top: -1px;
-    width: 28px;
-    border-radius: 100px;
-    position: relative; 
-    cursor: pointer;
-    opacity: 1;
-}
-.app__header-avartar {
-    border-radius: 7px;
-    position: absolute;
+
+/* Thông tin trong phần tin nhắn */
+.app__header-msg {
     background-color: var(--white-color);
-    top: 42px;
+    position: absolute;
+    top: 50px;
+    right: 188px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px #ccc;
+    transform-origin: right;
     display: none;
-    transform-origin: top right;
-    animation: headerNoticeGrow ease-in-out 0.4s;
-    right: 32px;
-    box-shadow: 1px 1px 8px var(--gray-color);
-}
-.app__header-head-avartar:hover{
-    opacity: 0.9;
 }
 
-.app__header-head-item-has-avartar:hover .app__header-avartar{
+#app__header-head-target:target {
     display: block;
 }
-.app__header-avartar-nickname{
-    margin-top: 10px;
-}
-.app__header-avartar-heading {
+
+.app__header-msg-head {
     display: flex;
     align-items: center;
-    padding: 12px 12px 0 12px;
+    justify-content: space-between;
 }
-.app__header-avartar::before{
-    content: "";
+
+.app__header-msg-head-headding {
+    color: var(--text-color);
+    font-weight: 600;
+    font-size: 2.4rem;
     display: block;
-    position: absolute;
-    width: 82px;
-    height: 25px;
-    top: -22px;
-    right: -1px;
-    background-color: transparent;
-
-}
-.app__header-avartar-in {
-    width: 44px;
-    border-radius: 100px;
-}
-
-.app__header-avartar-text{
-    margin-left: 15px;
-}
-.app__header-avartar-separator {
-
-}
-
-.app__header-avartar-list {
-    list-style: none;
-    padding-left: 0px;
-}
-
-.app__header-avartar-list-item {
-    padding-left: 10px;
-    padding-bottom: 6px;
-}
-
-.app__header-avartar-link {
     text-decoration: none;
+    margin: 9px 10px 1px 16px;
+}
+
+.app__header-msg-head-link {
+    background-color: #f0f2f5;
+    border-radius: 50px;
+    width: 44px;
+    height: 41px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 2.4rem;
+    color: var(--text-color);
+    margin: 3px 15px -4px 7px;
     display: block;
-    font-size: 1.6rem;
-    font-weight: 500;
+}
+
+.app__header-msg-head-link:hover {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.app__header-msg-search {
+    width: 360px;
+    background-color: #f0f2f5;
+    border-radius: 100px;
+    outline: none;
+    border: none;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 1.4rem;
+}
+
+.app__header-msg-list {
+    max-height: 400px;
+    overflow-y: scroll;
+    list-style: none;
+    padding-left: 0;
+}
+
+.app__header-msg-item {
+    padding: 15px;
+}
+
+.app__header-msg-item:hover {
+    /* background-color: var(--gray-color); */
+}
+
+.app__header-msg-link {
+    text-decoration: none;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+}
+
+.app__header-msg-link:hover {
     color: var(--text-color);
 }
+
+.app__header-msg-avartar {}
+
+.app__header-msg-picture {
+    width: 56px;
+    height: 60px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 50%;
+}
+
+.app__header-msg-content {
+    margin-bottom: 10px;
+    margin-left: 12px;
+}
+
+.app__header-msg-Messages {
+    margin-left: 2px;
+    font-size: 1.2rem;
+}
+
 
 /* nav end */
 .app__header-end {
@@ -330,12 +450,388 @@
     margin-bottom: 6px;
 }
 
+/* Thông tin phần giới thiệu */
+.app__header-end-introduce {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#app__header-end-has-introduce:target {
+    display: block;
+}
+
+.app__header-end-introduce-dialog {
+    position: absolute;
+    border-radius: 10px;
+    background-color: var(--white-color);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.app__header-end-introduce-content {}
+
+.app__header-end-introduce-head {
+    display: flex;
+    align-items: center;
+    padding: 20px 20px 8px 20px;
+    justify-content: space-between;
+}
+
+.app__header-end-introduce-title {
+    font-size: 2.3rem;
+}
+
+.app__header-end-introduce-link {
+    background-color: #f0f2f5;
+    width: 36px;
+    height: 36px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 2rem;
+    text-decoration: none;
+    display: block;
+    color: var(--text-color);
+    margin: -8px 10px 0px 8px;
+}
+
+.app__header-end-introduce-link:hover {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+
+/* Thông tin trong phần my course */
+.app__header-end-course {
+    position: absolute;
+    display: none;
+    background-color: var(--white-color);
+    box-shadow: 0 2px 4px #ccc;
+    border-radius: 10px;
+    width: 400px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    animation: faceIn ease-in 0.3s;
+}
+
+.app__header-end-item-has-course:hover .app__header-end-course {
+    display: block;
+}
+
+.app__header-end-course-heading {
+    padding: 10px;
+}
+
+.app__header-end-course-list {
+    max-height: 360px;
+    overflow-y: scroll;
+    list-style: none;
+    padding-left: 0;
+}
+
+.app__header-end-course-item {
+    margin: 5px;
+    border-radius: 3px;
+}
+
+.app__header-end-course-item:hover {
+    background-color: var(--hover-1);
+}
+
+.app__header-end-course-item--no-hover:hover {
+    background-color: var(--white-color);
+}
+
+.app__header-end-course-link {
+    text-decoration: none;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: var(--text-color);
+}
+
+.app__header-end-course-link:hover {
+    color: var(--text-color);
+}
+
+.app__header-end-course-photo {}
+
+.app__header-end-course-picture {
+    border-radius: 10px;
+    width: 130px;
+    height: 70px;
+}
+
+.app__header-end-course-content {}
+
+.app__header-end-course-content--has-button {
+    margin-right: 56px;
+}
+
+.app__header-end-course-title {}
+
+.app__header-end-course-notice {
+    color: var(--invalid-color);
+    font-weight: 600;
+}
+
+.app__header-end-course-process {
+    width: 200px;
+    height: 20px;
+}
+
+.app__header-end-course-btn {
+    font-size: 1.6rem;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--button-color);
+}
+
+.app__header-end-course-btn:hover {
+    color: var(--gray-color);
+    background-color: var(--hover-1);
+}
+
+/* Thông tin trong phần Follower */
+.app__header-end-follower{
+    background-color: var(--white-color);
+    position: absolute;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 300px;
+    border-radius: 4px;
+    display: none;
+    animation: faceIn ease 0.3s;
+}
+
+.app__header-end-item-has-follower:hover .app__header-end-follower{
+    display: block;
+}
+.app__header-end-follower-heading{
+    margin-top: 8px;
+    padding: 10px;
+}
+.app__header-end-follower-separator{
+
+}
+.app__header-end-follower-content{
+
+}
+.app__header-end-follower-list{
+    max-height: 420px;
+    overflow-y: scroll;
+    list-style: none;
+    padding-left: 0;
+}
+.app__header-end-follower-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 12px;
+}
+.app__header-end-follower-link{
+    text-decoration: none;
+    font-size: 1.6rem;
+    display: block;
+    color: var(--text-color);
+    cursor: default;
+}
+
+.app__header-end-follower-link:hover{
+    color: var(--text-color);
+    background-color: var(--white-color);
+}
+.app__header-end-follower-photo{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    margin-left: 8px;
+}
+.app__header-end-follower-title{
+    margin: 12px 0px 0px 8px;
+}
+.app__header-end-follower-userName{
+    padding-bottom: 5px;
+    color: var(--primary-color);
+}
+.app__header-end-follower-picture{
+    width: 56px;
+    height: 55px;
+    border-radius: 50px;
+    object-fit: cover;
+    object-position: top;
+    cursor: pointer;
+}
+.app__header-end-follower-user{
+    margin: 0px 15px 0px 0px;
+}
+.app__header-end-follower-btn{
+    background-color: var(--hover-1);
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: var(--fb-color);
+    display: block;
+    text-align: center;
+    line-height: 3.7rem;
+    width: 36px;
+    height: 36px;
+    border-radius: 30px;
+    cursor: pointer;
+    margin-left: 6px;
+}
+.app__header-end-follower-fl{
+    margin-top: 2px;
+    text-decoration: none;
+    font-size: 1rem;
+    text-align: center;
+    display: block;
+    background-color: var(--button-color-2);
+    color: var(--white-color);
+    border-radius: 10px;
+    min-width: 50px;
+}
+.app__header-end-follower-fl:hover{
+    opacity: 0.7;
+    color: var(--hover-1);
+}
+.app__header-end-follower-btn:hover{
+    color: var(--white-color);
+    background-color: var(--fb-color);
+}
+
+
+/* Thông tin trong phần Đang Follow */
+.app__header-end-viewer{
+    position: absolute;
+    background-color: var(--white-color);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 4px;
+    animation: faceIn ease 0.3s;
+    display: none;
+}
+.app__header-end-item-has-viewer:hover .app__header-end-viewer{
+    display: block;
+}
+.app__header-end-viewer-title{
+    padding: 12px 12px 10px 12px;
+    line-height: 2.9rem;
+}
+.app__header-end-viewer-list{
+    list-style: none;
+    padding-left: 0;
+}
+.app__header-end-viewer-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.app__header-end-viewer-link{
+    padding: 5px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: var(--text-color);
+    cursor: default;
+}
+.app__header-end-viewer-link:hover{
+    color: var(--text-color);
+}
+.app__header-end-viewer-user{
+    display: flex;
+    align-items: center;
+}
+.app__header-end-viewer-photo{
+    width: 55px;
+    height: 50px;
+    border-radius: 30px;
+    object-fit: cover;
+    object-position: top;
+    cursor: pointer;
+}
+.app__header-end-viewer-content{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.app__header-end-viewer-userName{
+    font-size: 2.0rem;
+    color: var(--primary-color);
+    cursor: default;
+}
+.app__header-end-viewer-description{
+    cursor: default;
+}
+.app__header-end-viewer-description:hover{
+    color: var(--text-color);
+}
+.app__header-end-viewer-icon{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin-top: -30px;
+}
+.app__header-end-viewer-connect{
+    background-color: var(--hover-1);
+    text-decoration: none;
+    display: block;
+    font-size: 1.4rem;
+    line-height: 3.7rem;
+    width: 36px;
+    height: 36px;
+    border-radius: 30px;
+}
+.app__header-end-viewer-connect:hover{
+    background-color: var(--fb-color);   
+    color: var(--white-color);
+}
+.app__header-end-viewer-connect--1{
+    position: relative;
+    text-align: center;
+    margin-bottom: 12px;
+}
+.app__header-end-viewer-information{
+    color: var(--white-color);
+    background-color: var(--fb-color);
+    border-radius: 5px;
+    position: absolute;
+    min-width: 100px;
+    height: 30px;
+    line-height: 2.5rem;
+    top: 3px;
+    left: 40px;
+    display: none;
+}
+.app__header-end-viewer-connect--1:hover .app__header-end-viewer-information{
+    display: block;
+}
+.app__header-end-viewer-connect--2{
+    position: relative;
+    text-align: center;
+    margin: auto;
+    line-height: 2.8rem;
+    margin-left: 1px;
+}
+.app__header-end-viewer-connect--2:hover .app__header-end-viewer-information{
+    display: block;
+}
+/* Thông tin trong phần ủng hộ */
+
+
 /* Thông tin trong kết nối */
 .app__header-information {
     position: absolute;
     background-color: var(--white-color);
     top: calc(100% + 5px);
-    right: 22px;
+    right: -83px;
     width: 200px;
     height: 50px;
     border-radius: 3px;
@@ -350,16 +846,6 @@
     display: block;
 }
 
-.app__header-information::before {
-    content: "";
-    position: absolute;
-    border-width: 11px 16px;
-    border-style: solid;
-    border-color: transparent transparent var(--white-color) transparent;
-    right: 15px;
-    top: -22px;
-}
-
 .app__header-information::after {
     content: "";
     display: block;
@@ -367,7 +853,7 @@
     width: 114px;
     height: 30px;
     top: -28px;
-    right: 1px;
+    right: 92px;
     background-color: transparent;
 }
 
