--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -98,3 +98,14 @@ html {
     margin-left: -12px;
     margin-right: -12px;
 }
+.grid__column-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 16.6667%;
+}
+
+.grid__column-10 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 83.3333%;
+}
