--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 /* app_header */
 .app__header {
     z-index: 1;
@@ -5,6 +6,8 @@
     background: linear-gradient(to left bottom, rgb(255 18 211), rgb(5 255 247));
     height: var(--header-height);
     position: fixed;
+
+
 }
 
 /* nav head */
@@ -1059,4 +1062,18 @@
 
 .fa-reddit {
     color: red;
+}
+
+
+/* Làm phần main */
+.app__container{
+    position: relative;
+    top: 140px;
+}
+.app__container-main{
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--hover-1);
 }
